# vue_wasm_template

./: .env  .gitignore  README.md  package.json  vite.config.ts
public/: worker.ts
src/: App.vue  echoWorker.ts  echoWorkerPlugin.ts  injectionKeys.ts  main.ts
src/composable/: useEchoWorker.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
