[package]
name = "wasm"
version = "0.1.0"
authors = ["Shaun Savage <savages@savages.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = { version = "1.0.217", features = ["alloc", "derive"] }
serde_json = { version = "1.0.134", features = ["alloc", "preserve_order", "indexmap"] }
wasm-bindgen-futures = { version = "0.4.49", features = ["futures-core"] }
serde-wasm-bindgen = "0.6.5"
dotenv = { version = "0.15.0", features = ["clap", "cli"] }
js-sys = "0.3.76"

[dependencies.web-sys]
version = "0.3.76"
features = ["console", "Window",
'Headers', 'Request', 'RequestInit', 'RequestMode', 'Response',
"Document", "Element", "HtmlElement"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
